--- a/GarciaMariaPablo/src/main/resources/templates/global/login.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/login.html
@@ -43,7 +43,7 @@
                         <div class="input-group">
                             <input type="password" id="password" class="form-control form-control-lg"
                                 th:field="*{password}" placeholder="••••••••" required maxlength="32"
-                                title="Debe tener entre 8 y 32 caracteres, con al menos una mayúscula, una minúscula y un número."
+                                title="Debe tener maximo 32 caracteres"
                                 autocomplete="current-password">
                             <button type="button" class="btn btn-outline-secondary" id="togglePassword"
                                 title="Mostrar u ocultar contraseña">
