--- a/GarciaMariaPablo/src/main/resources/templates/global/register.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/register.html
@@ -43,7 +43,7 @@
                         <div class="input-group">
                             <input th:field="*{password}" type="password" id="password"
                                 class="form-control form-control-lg" placeholder="Contraseña" required maxlength="32"
-                                title="Debe tener entre 8 y 32 caracteres, con al menos una mayúscula, una minúscula y un número.">
+                                title="Debe tener maximo 32 caracteres">
                             <button type="button" class="btn btn-outline-secondary" id="togglePassword"
                                 title="Mostrar u ocultar contraseña">
                                 <i class="bi bi-eye" id="togglePasswordIcon"></i>
@@ -58,7 +58,7 @@
                         </label>
                         <input th:field="*{password2}" type="password" id="confirmPassword"
                             class="form-control form-control-lg" placeholder="Repite la contraseña" required
-                            minlength="8" maxlength="32" autocomplete="new-password">
+                            maxlength="32" autocomplete="new-password">
                         <div class="invalid-feedback d-none" id="confirmPasswordError"><span>Las contraseñas no
                                 coinciden.</span></div>
                     </div>
