--- a/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
@@ -60,8 +60,8 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active custom-nav-link" href="#" title="Inicio">
-                        <i class="bi bi-house-door me-2"></i><span>Inicio</span>
+                    <a class="nav-link active custom-nav-link" href="../otros/dashboard.html" th:href="@{/user/dashboard}" title="Ir al dashboard">
+                        <i class="bi bi-house-door me-2"></i><span>Dashboard</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -125,6 +125,9 @@
                         <i class="bi bi-box-arrow-left me-2"></i><span>Cerrar sesión</span>
                     </button>
                 </form>
+                <a th:href="@{/perfil}" href="../perfil.html" class="btn btn-outline-info" title="Ir a mi perfil">
+                    <i class="bi bi-people me-2"></i><span>Perfil</span>
+                </a>
             </div>
         </div>
     </div>
