--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
@@ -77,7 +77,7 @@
               <div th:each="usuario, iterStat : ${estadisticasJAVA.topRapidos}"
                 class="d-flex justify-content-between align-items-center">
                 <span th:text="${iterStat.index + 1} + '. ' + ${usuario.nombreCompleto}">1. Ana López</span>
-                <span class="badge bg-primary" th:text="${usuario.horasMedias} + ' horas'">2.5 horas</span>
+                <span class="badge bg-primary" th:text="${#numbers.formatDecimal(usuario.horasMedias,0,2)} + ' horas'">2.5 horas</span>
               </div>
             </div>
           </div>
