--- a/GarciaMariaPablo/src/main/resources/templates/global/perfil.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/perfil.html
@@ -145,7 +145,7 @@
                                         <div class="card border-0 shadow-sm h-100">
                                             <div class="card-body">
                                                 <h3 class="h6 text-muted">
-                                                    <i class="bi bi-clock me-2"></i><span>Tiempo promedio</span>
+                                                    <i class="bi bi-clock me-2"></i><span>Tiempo promedio de Trabajo</span>
                                                 </h3>
                                                 <div class="d-flex align-items-center mt-3">
                                                     <div class="bg-info bg-opacity-10 p-3 rounded me-3">
