--- a/GarciaMariaPablo/src/main/resources/templates/global/index.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/index.html
@@ -10,6 +10,7 @@
     <title>Página principal | Gestión de Incidencias</title>
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
     <script src="../../static/js/index/loadVideo.js" th:src="@{/js/index/loadVideo.js}"></script>
+    <script src="../../static/js/index/loadMailModal.js" th:src="@{/js/index/loadMailModal.js}"></script>
 </head>
 
 <body class="bg-light">
@@ -18,7 +19,7 @@
 
     <main>
 
-        <section class="py-5 bg-white">
+        <section class="py-5 bg-white" id="planes">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -63,7 +64,7 @@
                 <div class="list-group mb-3">
                     <a href="#" class="list-group-item list-group-item-action"
                         data-video="https://www.youtube.com/embed/bknR-sjrazE?si=hwBMSJ-A0OmaKH7C"
-                       title="Creación de incidencias">
+                        title="Creación de incidencias">
                         <i class="bi bi-plus-circle txt-main me-2"></i><span>Creación de incidencias</span>
                     </a>
                     <a href="#" class="list-group-item list-group-item-action"
@@ -78,7 +79,7 @@
                     </a>
                     <a href="#" class="list-group-item list-group-item-action"
                         data-video="https://www.youtube.com/embed/5v04wBzN7Gw?si=3oRoeaFPnanodb8h"
-                       title="Visualizar reportes">
+                        title="Visualizar reportes">
                         <i class="bi bi-graph-up txt-main me-2"></i><span>Reportes básicos</span>
                     </a>
                 </div>
@@ -341,6 +342,39 @@
             </div>
         </section>
     </main>
+
+    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-main text-white">
+                    <h5 class="modal-title" id="contactModalLabel">Contratar Plan</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <form th:action="@{/contratar}" th:method="put" th:object="${emailDao}">
+                    <div class="modal-body">
+                        <input type="hidden" th:field="*{planSeleccionado}">
+
+                        <div class="alert alert-info mt-3">
+                            <i class="bi bi-info-circle me-2"></i>Te enviaremos los detalles de la contratación a este
+                            correo.
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email de contacto</label>
+                            <input type="email" class="form-control" th:field="*{email}" required
+                                placeholder="tu@email.com">
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <input type="submit" class="btn btn-main text-white" value="Enviar Solicitud">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 </body>
