Modificar equipo tecnico.

--- a/GarciaMariaPablo/src/main/resources/templates/global/quienes-somos.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/quienes-somos.html
@@ -65,6 +65,11 @@
                                 alt="Pablo Garcia Maria - Desarrollador y Gestor de la web">
                         </div>
                         <div class="carousel-item">
+                            <img src="/img/banners/MexiChango.png"
+                                 th:src="@{/img/banners/MexiChango.png}" class="d-block mx-auto img-fluid w-75"
+                                 alt="Gabriel Perez Marquez - Tester 0">
+                        </div>
+                        <div class="carousel-item">
                             <img src="/img/banners/PerezMarquezGabriel.png"
                                 th:src="@{/img/banners/PerezMarquezGabriel.png}" class="d-block mx-auto img-fluid w-75"
                                 alt="Gabriel Perez Marquez - Tester 1">
